@@ -1,5 +1,5 @@
 /*
-  $NiH: zip_fopen.c,v 1.6 2003/10/02 14:13:29 dillo Exp $
+  $NiH: zip_fopen.c,v 1.7 2003/10/03 08:34:11 dillo Exp $
 
   zip_fopen.c -- open file in zip archvie for reading
   Copyright (C) 1999, 2003 Dieter Baron and Thomas Klausner
@@ -41,14 +41,12 @@
 
 
 struct zip_file *
-zip_fopen(struct zip *zf, const char *fname, int case_sens)
+zip_fopen(struct zip *za, const char *fname, int flags)
 {
     int idx;
 
-    if ((idx=zip_name_locate(zf, fname, case_sens)) < 0) {
-	zip_err = ZERR_NOENT;
+    if ((idx=zip_name_locate(za, fname, flags)) < 0)
 	return NULL;
-    }
 
-    return zip_fopen_index(zf, idx);
+    return zip_fopen_index(za, idx);
 }
